--- a/06_exercises.Rmd
+++ b/06_exercises.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Weekly Exercises #6'
-author: "Put your name here"
+author: "Daniel Beidelschies"
 output: 
   html_document:
     keep_md: TRUE
@@ -12,7 +12,7 @@ output:
 
 
 ```{r setup, include=FALSE}
-#knitr::opts_chunk$set(echo = TRUE, error=TRUE, message=FALSE, warning=FALSE)
+knitr::opts_chunk$set(echo = TRUE, error=TRUE, message=FALSE, warning=FALSE)
 ```
 
 ```{r libraries}
@@ -106,20 +106,38 @@ vg %>%
 4. CHALLENGE (not graded): Write code to replicate the table shown below (open the .html file to see it) created from the `garden_harvest` data as best as you can. When you get to coloring the cells, I used the following line of code for the `colors` argument:
   
 ```{r, eval=FALSE}
-colors = scales::col_numeric(
-      palette = paletteer::paletteer_d(
-        palette = "RColorBrewer::YlGn"
-      ) %>% as.character()
+#colors = scales::col_numeric(
+#      palette = paletteer::paletteer_d(
+#        palette = "RColorBrewer::YlGn"
+#      ) %>% as.character()
 ```
 
-![](garden_table.html){width=600, height=1000}
 
   
 5. Use `patchwork` operators and functions to combine at least two graphs using your project data or `garden_harvest` data if your project data aren't read.
 
 ```{r}
-p1 <- ggplot(vgsales)+
-  geom_col(aes(y = Genre, x = Global_Sales))
+vg_games <- vgsales %>% 
+  group_by(Genre) %>% 
+  summarise(top_sales = sum(Global_Sales)) %>% 
+  filter(top_sales >0)
+
+vg_plat <- vgsales %>% 
+  group_by(Platform) %>% 
+  summarise(top_sales = sum(Global_Sales)) %>% 
+  filter(top_sales >2)
+
+
+p1 <- ggplot(vg_games)+
+  geom_col(aes(y = Genre, x = top_sales))+
+  labs(x="", title = "Total Global Sales in  Millions")
+p2 <- ggplot(vg_plat)+
+  geom_col(aes(y = Platform, x = top_sales))+
+  labs(x="", title = "Total Global Sales in  Millions")
+
+p4 <-p1+p2
+
+p4
 ```
   
 ## Webscraping exercise (also from tutorial)
@@ -127,6 +145,66 @@ p1 <- ggplot(vgsales)+
 Use the data from the [Macalester Registrar's Fall 2017 Class Schedule](https://www.macalester.edu/registrar/schedules/2017fall/class-schedule/#crs10008) to complete all these exercises.
 
 6. Find the correct selectors for the following fields. Make sure that each matches 762 results:
+
+```{r}
+fall2017 <- read_html("https://www.macalester.edu/registrar/schedules/2017fall/class-schedule/#crs10008")
+
+course_num <- fall2017 %>%
+  html_elements(".class-schedule-course-number") %>%
+  html_text2()
+
+course_name <- fall2017 %>%
+  html_elements(".class-schedule-course-title") %>%
+  html_text2()
+
+course_day <- fall2017 %>%
+  html_elements(".class-schedule-course-title+ .class-schedule-label") %>%
+  html_text2() %>% 
+  str_sub(start = 7)
+
+course_time <- fall2017 %>%
+  html_elements("td.class-schedule-label:nth-child(4)") %>% 
+  html_text2() %>% 
+  str_sub(start = 7)
+
+course_room <- fall2017 %>%
+  html_elements("td.class-schedule-label:nth-child(5)") %>% 
+  html_text2() %>% 
+  str_sub(start = 7)
+
+course_instru <- fall2017 %>%
+  html_elements("td.class-schedule-label:nth-child(6)") %>% 
+  html_text2() %>% 
+  str_sub(start = 13)
+
+course_avail <- fall2017 %>%
+  html_elements("td.class-schedule-label:nth-child(7)") %>% 
+  html_text2() %>% 
+  str_sub(start = 14)
+
+course_gen <- fall2017 %>%
+  html_elements(".collapsed p:nth-child(2)") %>% 
+  html_text2() %>% 
+  str_sub(start = 35)
+
+course_descript <- fall2017 %>%
+  html_elements(".collapsed p:nth-child(1)") %>% 
+  html_text2() %>% 
+  str_sub(start = 3)
+
+class <- data.frame(
+  CourseNumber = course_num,
+  CourseName = course_name,
+  CourseDay = course_day,
+  CourseTime = course_time,
+  CourseAvailability = course_avail,
+  CourseGenEdReq = course_gen,
+  CourseDescription = course_descript
+)
+
+tibble(class)
+
+```
 
   * Course Number
   * Course Name
@@ -142,7 +220,21 @@ Then, put all this information into one dataset (tibble or data.frame) Do not in
   
 
 7. Create a graph that shows the number of sections offered per department. Hint: The department is a substring of the course number - there are `str_XXX()` functions that can help. Yes, COMP and MATH are the same department, but for this exercise you can just show the results by four letter department code, e.g., with COMP and MATH separate.
-
+```{r, fig.height=10, fig.width=10}
+class %>% 
+  mutate(CourseDepartment = ifelse(str_sub(CourseNumber, end = 3) == "ART",
+                                   str_sub(CourseNumber, end = 4),
+                                   str_sub(CourseNumber,end = 4))) %>%
+  mutate(CourseDepartment = ifelse(str_sub(CourseNumber, end = 2) == "PE",
+                                   str_sub(CourseNumber, end = 3),
+                                   str_sub(CourseNumber,end = 4))) %>% 
+  group_by(CourseDepartment) %>% 
+  count() %>% 
+  ggplot(aes(x = n, y = CourseDepartment, fill = CourseDepartment))+
+  geom_col()+
+  labs(y="", x="", title = "Number of Sections for each Department")+
+  theme(legend.position = 'none')
+```
 
 8. Analyze the typical length of course names by department. To do so, create a new data table based on your courses data table, with the following changes:
   
@@ -150,7 +242,34 @@ Then, put all this information into one dataset (tibble or data.frame) Do not in
   * Remove departments that have fewer than 10 sections of courses. To do so, group by department, then remove observations in groups with fewer than 10 sections (Hint: use filter with n()). Then `ungroup()` the data.  
   * Create a visualization of the differences across groups in lengths of course names or course descriptions. Think carefully about the visualization you should be using!
 
+```{r, fig.height=10, fig.width=10}
+classlength <- data.frame(
+  CourseNumber = course_num,
+  CourseName = course_name,
+  CourseDay = course_day,
+  CourseTime = course_time,
+  CourseAvailability = course_avail,
+  CourseGenEdReq = course_gen,
+  CourseDescription = course_descript,
+  NameLength = str_length(course_name),
+  DescriptionLength = str_length(course_descript)
+)
 
+classlength %>% 
+  mutate(CourseDepartment = ifelse(str_sub(CourseNumber, end = 2) == "PE",
+                                   str_sub(CourseNumber, end = 3),
+                                   str_sub(CourseNumber,end = 4))) %>% 
+  group_by(CourseDepartment) %>% 
+  filter(n()>=10) %>% 
+  ungroup()%>%
+  group_by(CourseDepartment) %>% 
+  summarise(ave_length = sum(NameLength)/n()) %>% 
+  ggplot(aes(x = ave_length,y = CourseDepartment, fill = CourseDepartment))+
+  geom_col()+
+  labs(y="", x="", title = "Average Length of Course Name for each Department")+
+  theme(legend.position = 'none')
+  
+```
   
 
 **DID YOU REMEMBER TO UNCOMMENT THE OPTIONS AT THE TOP?**
