--- a/06_exercises.Rmd
+++ b/06_exercises.Rmd
@@ -116,7 +116,7 @@ vg %>%
   
 5. Use `patchwork` operators and functions to combine at least two graphs using your project data or `garden_harvest` data if your project data aren't read.
 
-```{r}
+```{r, fig.alt= "Column chart of total sales based off of Genre and Platform"}
 vg_games <- vgsales %>% 
   group_by(Genre) %>% 
   summarise(top_sales = sum(Global_Sales)) %>% 
@@ -220,7 +220,7 @@ Then, put all this information into one dataset (tibble or data.frame) Do not in
   
 
 7. Create a graph that shows the number of sections offered per department. Hint: The department is a substring of the course number - there are `str_XXX()` functions that can help. Yes, COMP and MATH are the same department, but for this exercise you can just show the results by four letter department code, e.g., with COMP and MATH separate.
-```{r, fig.height=10, fig.width=10}
+```{r, fig.height=10, fig.width=10, fig.alt="Column chart that show number of sections in each department"}
 class %>% 
   mutate(CourseDepartment = ifelse(str_sub(CourseNumber, end = 3) == "ART",
                                    str_sub(CourseNumber, end = 4),
@@ -242,7 +242,7 @@ class %>%
   * Remove departments that have fewer than 10 sections of courses. To do so, group by department, then remove observations in groups with fewer than 10 sections (Hint: use filter with n()). Then `ungroup()` the data.  
   * Create a visualization of the differences across groups in lengths of course names or course descriptions. Think carefully about the visualization you should be using!
 
-```{r, fig.height=10, fig.width=10}
+```{r, fig.height=10, fig.width=10, fig.alt="Column chart that shows the average length of course names for each department"}
 classlength <- data.frame(
   CourseNumber = course_num,
   CourseName = course_name,
